            - fixed broken layout when rule name is to long / thx Sopor
            - added case sensitive option to "FindString()" on "choicectrl_category"
            - increase height of wxStaticBox / still not ok
            - changed position of "checkbox_checkspaces" and "checkbox_checkage"
            - resized "textctrl_rulename" and "dirpicker_path"
        - tab 4:
            - changed "del_rule()" function
                - fix bug who delete btn caused a fatal error if no rule was selected
            - changed "add_rule()" function
                - check if rule name already exists
                - fix bug where add_rule overwrites last rule on list
            - added "rule_clone_button" button
            - disable clone rule buttons while connected to hub as expected
            - enable/disable "OK" button only on wxEVT_COMMAND_TEXT_UPDATED instead of wxEVT_COMMAND_TEXT_UPDATED + wxEVT_KILL_FOCUS
        - tab 5 / tab 6:
            - moved existing "tab_5" to "tab_6"
        - tab 5:
            - added new tab for "categories" on tab position 5
            - added "categories_listbox" element
            - changed "categories_listbox" to sort categories by name
            - added "import_categories_tbl()" function
                - import categories from "cfg/rules.lua" to "cfg/categories.lua"
            - added "add_category()" function
                - check if category name contain whitespaces
                - check if category name already exists
            - added "del_category()" function
                - check if category name is selected on a rule
            - enable/disable "OK" button only on wxEVT_COMMAND_TEXT_UPDATED instead of wxEVT_COMMAND_TEXT_UPDATED + wxEVT_KILL_FOCUS
            - fixed bug where add_category overwrites last category on list
        - tab 6:
            - show filesize of log + error file
            - added call of "set_logfilesize()" function to click event on clear buttons