@@ -82,6 +82,9 @@ v0.8 [2015-]
             - increase height of wxStaticBox / still not ok
             - changed position of "checkbox_checkspaces" and "checkbox_checkage"
             - resized "textctrl_rulename" and "dirpicker_path"
+            - changed "save_button" to disabled in "add_rule()" and "del_rule()"
+            - added category and rule name to wxMessageDialog in "add_rule()" and "add_category()" if choosen name was already taken
+            - added "+1" to "treebook:GetSelection()" to avoid repeating "+1" serveral times
         - tab 4:
             - changed "del_rule()" function
                 - fix bug who delete btn caused a fatal error if no rule was selected
